--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My frist webpage</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="external.css">
 </head>
 
 <body>
