--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My frist webpage</title>
+    <link rel="stylesheet" href="external.css">
 </head>
+
 <body>
-    <form>
-        <label for="firstname">Firstname</label><br>
-        <input type="text" name="" id="firstname"><br>
-        <label for="middlename">Middlename</label><br>
-        <input type="text" name="" id="middlename"><br>
-        <label for="lastname">Lastname</label><br>
-        <input type="text" name="" id="lastname"><br>
-        <label for="email">Email</label><br>
-        <input type="email" name="" id="email"><br>
-        <label for="pass">Password</label><br>
-        <input type="password" name="" id="pass"><br>
-        <label for="file">Upload a pdf file </label><br>
-        <input type="file" name="" id="file"><br>
-    </form>
+    <!--Below is the Id selector-->
+    <p  style="background-color: red;" class="main" >this is a new p tag</p>
+    <div  class="main1">this is main</div>
 </body>
+
 </html>
 
 
