--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 
 <body>
     <!--Below is the Id selector-->
-    <p  style="background-color: red;" class="main" >this is a new p tag</p>
+    <p  style="background-color: rgb(255, 255, 255);" class="main" >this is a new p tag</p>
     <div  class="main1">this is main</div>
 </body>
 
