--- a/Task2/index.html
+++ b/Task2/index.html
@@ -39,6 +39,7 @@
          }
          font{
             color: blue;
+            font-weight: normal;
          }
          .a, .a1, .a2, .a3, .a4, .a5, .a6, .a7, .a8{
             color: red;
